k3s_cluster/base/default/technitium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: default
  labels:
    app: main-technitium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-technitium
  template:
    metadata:
      labels:
        app: main-technitium
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      containers:
      - name: dns-server
        image: technitium/dns-server:latest
        ports:
        - containerPort: 5380 # http-web
        - containerPort: 53443 # https-web

        - containerPort: 53 # dns-udp
          protocol: UDP
        - containerPort: 53 # dns-tcp
          protocol: TCP
        - containerPort: 853 # DNS-over-QUIC service
          protocol: UDP
        - containerPort: 853 # DNS-over-TLS service
          protocol: TCP
        - containerPort: 443 # DNS-over-HTTPS service (HTTP/3)
          protocol: UDP 
        - containerPort: 443 # DNS-over-HTTPS service (HTTP/1.1, HTTP/2)
          protocol: TCP 
        - containerPort: 80
          protocol: TCP # DNS-over-HTTP service (use with reverse proxy or certbot certificate renewal)
        - containerPort: 8053 # DNS-over-HTTP service (use with reverse proxy)
          protocol: TCP
        securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
                - NET_ADMIN
        volumeMounts:
        - name: config
          mountPath: /etc/dns
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: technitium-pvc
