k3s_cluster/base/default/technitium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
  labels:
    app: main-technitium
spec:
  type: ClusterIP
  selector:
    app: main-technitium
  ports:
    - name: web
      port: 2283
      targetPort: 5380 
    - name: websecure
      port: 2284
      targetPort: 53443
---
# https://github.com/TechnitiumSoftware/DnsServer/blob/master/docker-compose.yml
apiVersion: v1
kind: Service
metadata:
  name: service-dns
  namespace: default
  labels:
    app: main-technitium
  annotations:
    metallb.io/address-pool: public-ips
    metallb.io/loadBalancerIPs: 192.168.1.1
spec:
  type: LoadBalancer
  selector:
    app: main-technitium
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-over-quic
      port: 853
      targetPort: 853
      protocol: UDP
    - name: dns-over-tls
      port: 853
      targetPort: 853
      protocol: TCP
    # - name : dns-over-https # (HTTP/3)
    #   port: 443
    #   targetPort: 443
    #   protocol: UDP
    # - name : dns-over-https # (HTTP/1.1, HTTP/2)
    #   port: 443
    #   targetPort: 443
    #   protocol: TCP
    # - name : dns-over-http # (use with reverse proxy or certbot certificate renewal)
    #   port: 80
    #   targetPort: 80
    #   protocol: TCP
    - name: dns-over-http-rp # (use with reverse proxy)
      port: 8053
      targetPort: 8053
      protocol: TCP
