k3s_cluster/base/default/technitium/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
  labels:
    app: main-technitium
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`technitium.main.home`)
      #middlewares:
      #  - name: main-middleware-basic-auth
      services:
        - name: technitium-service-dashboard
          port: 2283
  #tls: {} 

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-dos
  namespace: default
  labels:
    app: main-technitium
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`technitium.main.home`)
      #middlewares:
      #  - name: main-middleware-basic-auth
      services:
        - name: technitium-service-dashboard
          port: 2284
  #tls: {}
